@@ -7,6 +7,7 @@
       instance variables
     * allow more fined-grained control over :store_dir via callback
       methods [Gerret Apelt]
+    * allow assignment of regular file objects
 
 0.3.1
     * make object with file_columns serializable
